<resources>
    <string name="app_name">Polly Call</string>
    <string name="input_strange_phone_hint">請輸入陌生電話</string>
    <string name="phone_owner_hint">這是誰打來的？</string>
    <string name="is_scam_hint">是否是騷擾電話？</string>
    <string name="true_value">是</string>
    <string name="submit_btn">通報來電</string>
    <string name="no_value">否</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iap_btn">購買 PollyCall 方案</string>
    <string name="basic_subscription">basic_subscription</string>
    <string name="login_with_phone_number">Login</string>
    <string name="phone_number_input">請輸入電話號碼</string>
    <string name="login_btn_text">Login with Phone Number</string>
    <string name="premium_hint">Premium 用戶您好</string>
    <string name="product_price_text">${}/monthly</string>
    <string name="error_title">錯誤</string>
</resources>