<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_activity"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/standard_dimen"
        tools:context=".MainActivity">
        <TextView
            android:id="@+id/pollycall_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/title_text_size"
            android:gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_dimen"
            android:layout_marginTop="@dimen/standard_dimen"
            app:layout_constraintTop_toBottomOf="@id/pollycall_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_strange_phone_hint"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_owner_text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_dimen"
            app:layout_constraintTop_toBottomOf="@id/phone_number_text_input_layout"
            app:layout_constraintStart_toStartOf="@id/phone_number_text_input_layout"
            app:layout_constraintEnd_toEndOf="@id/phone_number_text_input_layout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_owner_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_owner_hint"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/is_scam_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/is_scam_hint"
            android:layout_marginTop="@dimen/standard_dimen"
            app:layout_constraintTop_toBottomOf="@id/phone_owner_text_input_layout"
            app:layout_constraintStart_toStartOf="@id/phone_owner_text_input_layout"
            app:layout_constraintEnd_toEndOf="@id/phone_owner_text_input_layout"
            />
        <RadioGroup
            android:layout_margin="@dimen/standard_dimen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/is_scam_title"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/is_scam_yes"
                android:text="@string/true_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/is_scam_no"
                android:text="@string/no_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
        <Button
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_btn"
            android:layout_margin="@dimen/standard_dimen"
           app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        ></androidx.constraintlayout.widget.ConstraintLayout>

</layout>