<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".uploadnumber.LoginPage">

        <TextView
            android:id="@+id/login_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_dimen"
            android:text="@string/login_with_phone_number"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/phone_number_input_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_dimen"
            android:layout_marginHorizontal="@dimen/standard_dimen"
            app:layout_constraintTop_toBottomOf="@id/login_page_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_btn"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_input"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_btn_text"
            android:padding="@dimen/standard_dimen"
            android:background="@color/primary"
            app:layout_constraintBottom_toTopOf="@id/iap_purchase_btn"
            app:layout_constraintTop_toBottomOf="@id/phone_number_input_layout" />

        <Button
            android:id="@+id/iap_purchase_btn"
            android:text="@string/iap_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:textColor="@color/primary"
            android:textSize="12sp"
            android:layout_marginVertical="@dimen/standard_dimen"
            app:layout_constraintStart_toStartOf="@id/login_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/login_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>